$Id: NEWS,v 1.122 2008/04/24 07:28:00 rocky Exp $

version 0.81cvs

- license of manual now GFDL 1.2 or later, with no invariant sections.

- Nero image handling more complete. 
    CD-Text processing.
    DAO in read_audio_sectors.
    ISRC processing.

- ISRC query for image files.

- Allow reading pregap of a track via get_track_pregap_lsn(). Add
  Section on "CD-DA pregap" in libcdio manual

- Allow cross-compiling to mingw32. Patch from Peter Hartley.

version 0.80
2008-03-15

- Add get_media_changed for FreeBSD
- Add option to log summary output in cd-paranoia
- More string bounds checking to eliminate known string overflow conditions,
  e.g. Savannah bug #21910
- add --mode="any" on cd-read which uses a mmc_read_sectors with read-type
       CDIO_MMC_READ_TYPE_ANY.
- add --log-summary option to cd-paranoia. Unused option --output-info (-i) removed
- some small packaging bugs fixed

Note: this is probably the last GPL v2 release; GPL v3 on the horizon.

version 0.79
2007-10-27

- iso-read: Add --ignore -k to ignore errors. 

- Fix Savannah Bugs #18522, #18563, #18131 #19221 (possibly), #19880,
  #21147 and other miscelleaneous bugs and memory leaks

- cd-info: force CDDB disc id to be 32-bits. Problem reported 
           by Eric Shattow.
- cd-paranoia: allow ripping before the first track. Problem reported 
               by Eric Shattow. Fix erroneous #defines when
               DO_NO_WANT_PARANOIA_COMPATIBILITY is set - reported by
               David Stockwell.
- Support for multisession CD-Extra Discs. Patch from Patrick Guimond

- Add iso9660_fs_find_lsn_with_path and iso9660_ifs_find_lsn_with_path
  to report the full filename path of lsn.

- improve eject code for OSX

version 0.78.2
2006-10-31
- preprocessor symbol LIBCDIO_VERSION number has to be an integer.
  (Bug caused by naming version 0.78.1)
                                     ^

version 0.78.1
2006-10-27

- Fix bug in libcdio.so version numbering. Also another small bug.